--- a/Rush-2.html
+++ b/Rush-2.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<header>
+
+
+
+</header>
 <body>
-KJBUECFUEZ
+
+
+
 </body>
+
+<footer>
+
+
+
+</footer>
 </html>
