--- a/Rush-2.html
+++ b/Rush-2.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-
-
-
 <header>
+
+    <div class="page">
+
+        <header class="header"><h1 class="header-title">Helvetica</h1><div id="menu-button" class="close"></div></header>
+        <nav id="menu" class="">
+            <ul>
+                <li>• Helvetica
+                <li>Arial
+                <li>Univers
+                <li>jenseign.com
+            </ul>
+        </nav>
+    </div>
+
+
+
+
+
+
 
 
 
