--- a/Rush-2.html
+++ b/Rush-2.html
@@ -6,7 +6,6 @@
 </head>
 
 
-
 <header>
 
 
@@ -14,7 +13,7 @@
 </header>
 <body>
 
-
+<div> <img src="art-natacha-canap-d-angle-m-ridienne-terminal-pouf-598.htm"
 
 
 </body>
