--- a/Rush-2.html
+++ b/Rush-2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="Rush-2.css">
 </head>
 <header>
 
@@ -40,4 +41,5 @@
 
 
 </footer>
+<script src="rush-2.js"></script>
 </html>
