--- a/Rush-2.html
+++ b/Rush-2.html
@@ -9,15 +9,24 @@
 
     <div class="page">
 
-        <header class="header"><h1 class="header-title">Helvetica</h1><div id="menu-button" class="close"></div></header>
+        <header class="header"><div id="menu-button" class="close"></div></header>
         <nav id="menu" class="">
             <ul>
-                <li>• Helvetica
-                <li>Arial
-                <li>Univers
-                <li>jenseign.com
+                <li>Home
+                <li>Shop
+                <li>Magasine
             </ul>
         </nav>
+    </div>
+
+    <div class="titre" style="display : flex;">
+    <p class="titre">Home</p>
+    <p class="titre">Shop</p>
+    <p class="titre">Magasine</p>
+    </div>
+
+    <div class="fh">
+        <p class="pfh">Login</p>
     </div>
 
 
