--- a/Rush-2.html
+++ b/Rush-2.html
@@ -18,14 +18,14 @@
             </ul>
         </nav>
     </div>
-
     <div class="titre" style="display : flex;">
-    <p class="titre">Home</p>
-    <p class="titre">Shop</p>
-    <p class="titre">Magasine</p>
+        <p class="titre">Home</p>
+        <p class="titre">Shop</p>
+        <p class="titre">Magasine</p>
     </div>
 
-    <div class="fh">
+    <div class="fh" style="display : flex;">
+        <img width="30" src="https://thumbs.dreamstime.com/b/trolley-icon-flat-vector-simple-isolated-illustration-signage-template-design-trendy-trolley-icon-flat-vector-template-design-179471253.jpg">
         <p class="pfh">Login</p>
     </div>
 
