xebn,l;!:nytfdrx-we(sty

--- a/Rush-2.html
+++ b/Rush-2.html
@@ -29,6 +29,18 @@
         <p class="pfh">Login</p>
     </div>
 
+    <div class="search">
+        <form class="searchform" action="#">
+            <input type="text"
+                   placeholder="living room"
+                   name="search">
+            <button>
+                <i class="fa fa-search"
+                   style="font-size: 18px;">
+                </i>
+            </button>
+        </form>
+    </div>
 
 
 
