--- a/Rush-2.html
+++ b/Rush-2.html
@@ -41,8 +41,12 @@
 </header>
 <body>
 
-<div> <img src="https://www.universducuir.com/ori-natacha-canap-d-angle-m-ridienne-terminal-pouf-598.jpg"
-    <img style = "position:relative; left:  80px; top:70px;">
+<div> <img class="canap" width= "215" src="Canapé.jpg">
+    <M> <BR> </M>
+    <M class="gras">Coombes</M>
+    <I>$2,600</I>
+    <M> <BR> </M>
+    <Y class="gris">LOUNGE</Y>
 </div>
 
 
