--- a/Rush-2.html
+++ b/Rush-2.html
@@ -58,109 +58,11 @@
 
 <body>
 
-    <div>
-        <div class="meuble" style= "display : flex;">
-            <div>
-                <img class="canap produit" width= "215" src="Canapé.jpg">
-                <div class="titleprice">
-                    <p class="gras">Coombes</p>
-                    <p>$2,600</p>
-                </div>
-                <p class="gris">LOUNGE</p>
-
-                <div class="ligne 3">
-                     <img class="caddie" width= "20" src="caddie.png">
-
-                    <div class="star">
-                        <img src="etoile%20noir.png" alt="etoile">
-                        <img src="etoile%20noir.png" alt="etoile">
-                        <img src="etoile%20noir.png" alt="etoile">
-                        <img src="etoile%20noir.png" alt="etoile">
-                        <img src="Etoile%20blanche.png" alt="etoile">
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div>
-                <img class="canap produit" width= "215" src="chaise.jpg">
-                <div class="titleprice">
-                    <p class="gras">Keeve Set</p>
-                    <p>$590</p>
-                </div>
-                <p class="gris">TABLE & CHAIRS</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-            <div>
-                <img class="canap produit" width= "215" src="fautueil.jpg">
-
-                <div class="titleprice">
-                    <p class="gras">Nillè</p>
-                    <p>$950</p>
-                </div>
-
-                <p class="gris">ARMCHAIR</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-        </div>
-
-        <div class="meuble" style= "display : flex;">
-            <div>
-                <img class="canap produit" width= "215" src="Plante.jpg">
-                <div class="titleprice">
-                    <p class="gras">Blanko</p>
-                    <p>$90</p>
-                </div>
-                <p class="gris">SIDE TABLE</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-            <div>
-                <img class="canap produit" width= "215" src="Livre.jpg">
-
-                <div class="titleprice">
-                    <p class="gras">Momo</p>
-                    <p>$890</p>
-                </div>
-
-                <p class="gris">SHELVES</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-            <div>
-                <img class="canap produit" width= "215" src="Chair.jpg">
-
-                <div class="titleprice">
-                    <p class="gras">Penemillè</p>
-                    <p>$120</p>
-                </div>
-                <p class="gris">CHAIR</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-            <div>
-                <img class="canap produit" width= "215" src="Café.png">
-                <div class="titleprice">
-                    <p class="gras">Kappu</p>
-                    <p>$420</p>
-                </div>
-                <p class="gris">SHELVES</p>
-                <img class="caddie" width= "20" src="caddie.png">
-            </div>
-
-
-        </div>
-    </div>
-
 </body>
-
-
 
 <footer>
 
+<p class="noire">1</p><p>2 3 4 5 6 7 8 9 10 ></p>
 
 </footer>
 <script src="rush-2.js"></script>
