--- a/Rush-2.html
+++ b/Rush-2.html
@@ -50,6 +50,27 @@
 <body>
     <div>
         <div class="meuble" style= "display : flex;">
+            <div id="filterBy">
+                <p>FILTER BY</p>
+                <div class="parameters">
+                    <div id="collection">
+                        <h4 class="parametersTitle">Collection</h4>
+                        <img class="parametersArrow" src="fleches.png" alt="expand collection menu">
+                    </div>
+                    <div id="color">
+                        <h4 class="parametersTitle">Color</h4>
+                        <img class="parametersArrow" src="fleches.png" alt="expand collection menu">
+                    </div>
+                    <div id="category">
+                        <h4 class="parametersTitle">Category</h4>
+                        <img class="parametersArrow" src="fleches.png" alt="expand collection menu">
+                    </div>
+                    <div id="price">
+                        <h4 class="parametersTitle">Price Range</h4>
+                        <input type="range" value="40" min="0" max="100" step="1" class="progress">
+                    </div>
+                </div>
+            </div>
             <div>
                 <img class="canap produit" width= "215" src="Canapé.jpg">
                 <div class="titleprice">
@@ -58,9 +79,8 @@
                 </div>
                 <p class="gris">LOUNGE</p>
 
-                <div class="ligne 3">
-                     <img class="caddie" width= "20" src="caddie.png">
-
+                <div class="ligne3">
+                    <img class="caddie" width= "20" src="caddie.png">
                     <div class="star">
                         <img src="etoile%20noir.png" alt="etoile">
                         <img src="etoile%20noir.png" alt="etoile">
@@ -68,7 +88,6 @@
                         <img src="etoile%20noir.png" alt="etoile">
                         <img src="Etoile%20blanche.png" alt="etoile">
                     </div>
-
                 </div>
 
             </div>
@@ -140,8 +159,6 @@
                 <p class="gris">SHELVES</p>
                 <img class="caddie" width= "20" src="caddie.png">
             </div>
-
-
         </div>
     </div>
 
